# Warcaby

./: Auxilary.c  Auxilary.h  Board.c  Board.h  CMakeLists.txt  Displayer.c  Displayer.h  GameFileHandler.c  GameFileHandler.h  GameLogicHandler.c  GameLogicHandler.h  GameStateHandler.c  GameStateHandler.h  MoveHandler.c  MoveHandler.h  Piece.c  Piece.h  Square.c  Square.h  main.c
CSFML/include/SFML/Graphics/: CircleShape.h
